# task_manager

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
src/task_manager/: cli.py  main.py  manager.py  models.py  storage.py
tests/: test_manager.py  test_models.py  test_storage.py
