[tool.poetry]
name = "task-manager"
version = "0.1.0"
description = ""
authors = ["Kohei Kikuchi"]
readme = "README.md"
packages = [{include = "task_manager", from="src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.11.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
ruff = "^0.11.8"
mypy = "^1.15.0"

[tool.poetry.scripts]
task = "task_manager.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
